nickel-lang-lib/tests/integration/fail/type_var_outside_forall.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'TypecheckError::UnboundIdentifier'
#
# [test.metadata.expectation]
# identifier = 'a'
let f | a -> (forall a. a -> a) =
  fun x => builtin.seq x null
in null